--- a/Maestrodetalles/Views/Proyecto/Details.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalles</h1>
 
 <div>
     <h4>Proyecto</h4>
@@ -40,6 +40,6 @@
     @await Html.PartialAsync("_Tarea", Model.Tarea)
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Editar</a> |
+    <a asp-action="Index">Cancelar</a>
 </div>
