--- a/Maestrodetalles/Views/Proyecto/Delete.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Delete.cshtml
@@ -36,7 +36,9 @@
             @Html.DisplayFor(model => model.FechaFin)
         </dd>
     </dl>
-    
+    <div class="row col-md-12">
+        @await Html.PartialAsync("_Tarea", Model.Tarea)
+    </div>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
