--- a/Maestrodetalles/Views/Proyecto/Create.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Create.cshtml
@@ -11,12 +11,12 @@
     <div class="row">
         <div class="form-group col-md-5">
             <label asp-for="Nombre" class="control-label"></label>
-            <input asp-for="Nombre" class="form-control" />
+            <input maxlength="100" asp-for="Nombre" class="form-control" />
             <span asp-validation-for="Nombre" class="text-danger"></span>
         </div>
         <div class="form-group col-md-5">
             <label asp-for="Descripcion" class="control-label"></label>
-            <input asp-for="Descripcion" class="form-control" />
+            <input maxlength="255" asp-for="Descripcion" class="form-control" />
             <span asp-validation-for="Descripcion" class="text-danger"></span>
         </div>
     </div>
