--- a/Maestrodetalles/Views/Proyecto/Create.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Create.cshtml
@@ -37,8 +37,8 @@
     </div>
     <div class="row">
         <div class="form-group">
-            <input type="submit" value="Crear" class="btn btn-primary" />|
-            <a class="btn btn-primary" asp-action="Index">Cancelar</a>
+            <input class="btn btn-outline-primary" type="submit" value="Crear" class="btn btn-primary" />|
+            <a class="btn btn-outline-danger" class="btn btn-primary" asp-action="Index">Cancelar</a>
         </div>
     </div>
 </form>
