--- a/Maestrodetalles/Views/Proyecto/Edit.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Edit.cshtml
@@ -38,8 +38,8 @@
     </div>
     <div class="row">
     <div class="form-group">
-        <input type="submit" value="Save" class="btn btn-primary" /> |
-        <a asp-action="Index">Cancelar</a>
+            <input class="btn btn-outline-primary" type="submit" value="Save"/> |
+            <a class="btn btn-outline-danger" asp-action="Index">Cancelar</a>
     </div>
     </div>
 </form>
