--- a/Maestrodetalles/Views/Proyecto/Create.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Create.cshtml
@@ -23,12 +23,12 @@
     <div class="row">
         <div class="form-group col-md-4">
             <label asp-for="FechaInicio" class="control-label"></label>
-            <input asp-for="FechaInicio" class="form-control" />
+            <input type="date" asp-for="FechaInicio" class="form-control" />
             <span asp-validation-for="FechaInicio" class="text-danger"></span>
         </div>
         <div class="form-group col-md-4">
             <label asp-for="FechaFin" class="control-label"></label>
-            <input asp-for="FechaFin" class="form-control" />
+            <input type ="date" asp-for="FechaFin" class="form-control" />
             <span asp-validation-for="FechaFin" class="text-danger"></span>
         </div>
     </div>
