--- a/Maestrodetalles/Views/Proyecto/Index.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Index.cshtml
@@ -45,7 +45,7 @@
             <td>
                 <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
                     <a class="btn btn-outline-success" asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
-                    <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Elimianr</a>
+                    <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
