--- a/Maestrodetalles/Views/Proyecto/Delete.cshtml
+++ b/Maestrodetalles/Views/Proyecto/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Eliminar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Quieres eliminar esta tarea</h3>
 <div>
     <h4>Proyecto</h4>
     <hr />
